# handwork-marketplace

./: .gitignore  DEBUG_CHECKLIST.md  PAYMENT_ISSUES_FIX.md  README-DEPLOYMENT.md  README.md  TESTING.md  TESTING_GUIDE.md  TESTING_SUITE_SUMMARY.md  TIMEOUT_IMPLEMENTATION_SUMMARY.md  TIMEOUT_TESTING_README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  eas.json  package-lock.json  render.yaml  run-all.ps1  run-backend.ps1  run-expo-fixed.ps1  run-frontend.ps1  temp_endpoints.py  test-api.ps1  test-mobile-fixes.ps1  timeout_test_results.json  working_timeout_test_results.json
backend/: .env.example  .flake8  .pre-commit-config.yaml  AUTHENTICATION_IMPLEMENTATION.md  Dockerfile  Dockerfile.prod  ESCROW_IMPLEMENTATION_SUMMARY.md  MESSAGING_SYSTEM.md  Makefile  PAYMENT_CALCULATION_IMPLEMENTATION.md  PAYMENT_SYSTEM.md  REFUND_IMPLEMENTATION_SUMMARY.md  SECURITY_MODULE_README.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_PAYMENT_METHOD_MANAGEMENT_SUMMARY.md  WORKER_EARNINGS_PAYOUT_IMPLEMENTATION.md  alembic.ini  check_payouts.py  check_schema.py  check_user_status.py  check_worker_data.py  config_help.py  firebase-service-account.json.json  fix_payouts.py  fix_roles.py  populate_database.py  pyproject.toml  render.yaml  requirements-minimal.txt  requirements.txt  reset_admin_password.py  reset_payouts.py  verify_roles.py
backend/alembic/: env.py
backend/app/: health.py  main.py
backend/config/: development.json  environments.py  production.json  staging.json
backend/monitoring/: alerts.py
backend/scripts/: backup_database.py  deploy.sh  (+2 more)
(+399 files in other folders)
